--- a/chirp-impl/src/main/resources/application.conf
+++ b/chirp-impl/src/main/resources/application.conf
@@ -1,7 +1,8 @@
 play.modules.enabled += sample.chirper.chirp.impl.ChirpModule
 
-chirp.cassandra.keyspace = chirp
+db.default {
+  driver = "org.h2.Driver"
+  url = "jdbc:h2:./target/h2-data/chirp-service"
+}
 
-cassandra-journal.keyspace = ${chirp.cassandra.keyspace}
-cassandra-snapshot-store.keyspace = ${chirp.cassandra.keyspace}
-lagom.persistence.read-side.cassandra.keyspace = ${chirp.cassandra.keyspace}
+jdbc-defaults.slick.driver = "slick.driver.H2Driver$"
