--- a/chirp-impl/src/main/resources/application.conf
+++ b/chirp-impl/src/main/resources/application.conf
@@ -1,1 +1,8 @@
 play.modules.enabled += sample.chirper.chirp.impl.ChirpModule
+
+db.default {
+  driver = "org.h2.Driver"
+  url = "jdbc:h2:./target/h2-data/chirp-service"
+}
+
+jdbc-defaults.slick.driver = "slick.driver.H2Driver$"
