--- a/chirp-impl/src/main/resources/application.conf
+++ b/chirp-impl/src/main/resources/application.conf
@@ -1,8 +1,8 @@
 play.modules.enabled += sample.chirper.chirp.impl.ChirpModule
 
 db.default {
-  driver = "org.h2.Driver"
-  url = "jdbc:h2:./target/h2-data/chirp-service"
+  driver = "com.ibm.db2.jcc.DB2Driver"
+  url = "jdbc:db2://localhost:50000/CHIRPER:user=db2inst1;password=db2inst1;"
 }
 
-jdbc-defaults.slick.driver = "slick.driver.H2Driver$"
+jdbc-defaults.slick.driver = "com.typesafe.slick.driver.db2.DB2Driver$"
